--- a/filmes/public/index.html
+++ b/filmes/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Basic Project</title>
+    <title>Viana Films | Prime Flix</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
